K8s-Manifest-Files/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-backend
  template:
    metadata:
      labels:
        app: fastapi-backend
    spec:
      containers:
        - name: backend
          image: ghanshyamramole/backend:v1
          ports:
            - containerPort: 8000
