K8s-Manifest-Files/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextjs-frontend
  template:
    metadata:
      labels:
        app: nextjs-frontend
    spec:
      containers:
        - name: frontend
          image: ghanshyamramole/frontend:v1
          ports:
            - containerPort: 3000
