K8s-Manifest-Files/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  type: ClusterIP
  selector:
    app: fastapi-backend
  ports:
    - port: 8000
      targetPort: 8000
