K8s-Manifest-Files/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
spec:
  type: ClusterIP
  selector:
    app: nextjs-frontend
  ports:
    - port: 3000
      targetPort: 3000
